# CO2-Profile-Retrieval

./: .gitignore  README.md  backtest_release.py  preprocess_oco2.py  pyproject.toml  train_forward.py  train_inverse.py
los_physics/: absc.py  brdf.py  constant.py  los.py  predict.py  solar.py
oco2_surrogate/: __init__.py  absc.py  diffusion.py  forward_models.py  inference_optimized.py  load_data.py  loss.py  model.py  plot.py  preprocessor.py  release.py
scripts/: import_release_artifacts.py  reproduce_figure2.py  run_2021_measured_scatter.py  run_smoke_tests.sh  sanity_check_artifacts.py  write_smoke_data.py
